# BA-BP

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
src/components/: ArchivePanel.jsx  AvatarSlot.jsx  BanZone.jsx  FreeStudentPanel.jsx  PickZone.jsx  PlayerPanel.jsx  ProtectedSlotsPanel.jsx  ResetModal.jsx  ScoreBox.jsx  StudentCard.jsx  StudentGrid.jsx  Timer.jsx  TypeIcons.jsx
src/hooks/: useDragContext.jsx
src/store/: draftStore.js
